--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
       <div class="message-container">
         <div class="message">
-          🎄 chúc cậu 1 mùa noel vui vẻ và hạnh phúc 😥🎄
+          🎄 chúc cậu 1 mùa noel vui vẻ và hạnh phúc 🎄
         </div>
         <div class="message2">
           <span>N</span><span>o</span><span>e</span><span>l</span>
@@ -275,12 +275,11 @@
           <span>&nbsp;</span>
           <span>v</span><span>ẻ</span>
           <span>&nbsp;</span>
-          <span>n</span><span>h</span><span>é</span>
           <span>&nbsp;</span>
-          <span>T</span><span>r</span><span>à</span>
+          <span>a</span><span>n</span>
           <span>&nbsp;</span>
-          <span>G</span><span>i</span><span>a</span><span>n</span
-          ><span>g</span> <span>!</span><span>!</span>
+          <span>l</span><span>à</span><span>n</span><span>h</span
+          > <span>!</span><span>!</span>
         </div>
       </div>
     </div>
