--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
       <div class="message-container">
         <div class="message">
-          🎄 chúc cậu 1 mùa noel vui vẻ và hạnh phúc 🎄
+          🎄 chúc 1 mùa noel vui vẻ và hạnh phúc 🎄
         </div>
         <div class="message2">
           <span>N</span><span>o</span><span>e</span><span>l</span>
