--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merry Christmas💘</title>
+    <title>Merry Christmas</title>
+    
     <style>
       * {
         margin: 0;
@@ -265,10 +266,11 @@
       </div>
 
       <div class="message-container">
-        <div class="message">
-            🎄 chúc 1 mùa noel vui vẻ và hạnh phúc 🎄
-            tr_quang05
-        </div>
+     <div class="message">
+    🎄 chúc 1 mùa noel vui vẻ và hạnh phúc 🎄<br />
+    <span style="font-size: 0.8em; color: #ffffff;">tr_quang05</span>
+</div>
+
         <div class="message2">
           <span>N</span><span>o</span><span>e</span><span>l</span>
           <span>&nbsp;</span>
@@ -281,9 +283,6 @@
           <span>&nbsp;</span>
           <span>l</span><span>à</span><span>n</span><span>h</span
           > <span>!</span><span>!</span>
-        </div>
-         <div class="message3">
-          tr_quang05
         </div>
       </div>
     </div>
@@ -391,5 +390,6 @@
     </script>
   </body>
 </html>
+
 
 
