--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
       <div class="message-container">
      <div class="message">
-    🎄 chúc 1 mùa noel vui vẻ và hạnh phúc 🎄<br />
+    🎄  Chúc bạn một mùa nolelll an lành, ấm áp và tràn ngập yêu thương:3 🎄<br />
     <span style="font-size: 0.8em; color: #ffffff;">tr_quang05</span>
 </div>
 
@@ -390,6 +390,7 @@
     </script>
   </body>
 </html>
+
 
 
 
